Fix odd mis-alignment of the tile pool. (When did this creep in?)

--- a/stc/style.css
+++ b/stc/style.css
@@ -46,7 +46,6 @@ div.pool {
     border-style: solid;
     border-width: 1px;
     border-color: #444;
-    margin: 5px;
     margin-bottom: 10px;
     padding: 5px;
     width: 1045px;
